acl-1.0.6 (13 June 2001)
	- Move acl/acl.h --to--> sys/acl.h which makes
	  it satisfy the Posix ACL standard.
	  This was also what was used in IRIX.
	- A fix was also done on June 11 for "chacl -b" and
	  "chacl -d" where the default ACL is being given. 
	  The code was checking the validity of the access ACL
	  instead of the default ACL. This is a real problem for
	  the -d option which doesn't have an access ACL specified ! 

acl-1.0.5 (6 June 2001)
	- Fix up acl_to_text and acl_to_short_text so that if it is
	  given an empty ACL then an empty string is returned. 
          Suggestion made by Juergen Hasch where comparing with
	  the ext2 Posix ACL patch of Andreas Gruenbacher.
	- Update acl.h to define ACL_OTHER (same as ACL_OTHER_OBJ).

acl-1.0.4 (29 May 2001)
	- Fix up acl_get_file, acl_get_fd bug for non-irix semantics
	  which I introduced in 1.0.3 (thanks Juergen Hasch).
        - Make acl_get_entry match Posix 23.4.13.3 semantics.
        - Make acl_create_entry match Posix 23.4.7.2 semantics.
	- add acl_get_perm() for the Samba work

acl-1.0.3 (24 May 2001)
	- Update libacl functions of acl_get_file, acl_get_fd,
	  so that they can do ext2 P1003.1e style semantics by default 
	  or IRIX P1003.1e semantics.
	  The change affects what is returned for a file if an
	  ACL is requested and no ACL has been explicitly set.
	  For ext2 P1003.1e style on an access ACL, 
	  a 3 entry mininum ACL based on the file's mode is returned 
	  wheras for IRIX an special empty ACL is returned.
	- Add new function, acl_set_compat, to allow IRIX compatibility 
	  if needed

acl-1.0.2 (18 May 2001)
	- updates to man pages

acl-1.0.1 (30 January 2001)
	- minor rpm and deb packaging work

acl-1.0.0 (15 January 2001)
	- access control list code abstracted from xfs-cmds package
	- completed Debian packaging
	- late beta code
