@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=1
 PKG_MINOR=0
-PKG_REVISION=6
+PKG_REVISION=7
 PKG_BUILD=0
